Change baseurl in config

--- a/about.html
+++ b/about.html
@@ -9,5 +9,7 @@ I am an IT professional and amateur futurist who lives in Newcastle, NSW, Austra
 
 I have been fascinated with technology and it's applications for as long as I can remember. I have worked in a variety of different areas including systems integration, network operations, and software design / development / delivery.
 
+I enjoy working with people and always aim to surround myself with people I can learn from.
+
 My hobbies vary from year to year, but aside from spending time with my family, generally revolve around: learning new software architectures, machine learning, data mining, augmented/virtual reality, gaming and games development, music and composition, science fiction, philosophy, eating and cooking, keeping fit to offset the eating and cooking, and getting cautiously excited about a space colony.
 
