--- a/index.html
+++ b/index.html
@@ -2,7 +2,4 @@
 layout: default
 title: 
 ---
-IT Professional with experience in software development and delivery, process automation and infrastructure management.
-
-
-Strives for continuous improvement, enjoys learning new and better ways to deliver software.
+IT professional and amateur futurist living in Newcastle, Australia.
