--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title: About
 ---
 ## About
 
-I have been fascinated with technology and it's applications for as long as I can remember. I have worked in a variety of different areas including systems integration, network operations, and software design / development / delivery.
+I have been fascinated with technology and its applications for as long as I can remember. I have worked in a variety of different areas including systems integration, network operations, and software design / development / delivery.
 
 I enjoy working with people and always aim to surround myself with people I can learn from.
 
